[gd_scene load_steps=10 format=3 uid="uid://cml6fxx0w4vff"]

[ext_resource type="Texture2D" uid="uid://xa7tkmao72xt" path="res://Objects/CoalStuff/TempCoalGen.png" id="1_27460"]
[ext_resource type="Script" path="res://Objects/CoalStuff/coal_generator.gd" id="1_kar8t"]
[ext_resource type="PackedScene" uid="uid://bbp0ryy8ekxlj" path="res://particles/fire_1.tscn" id="3_l5nvf"]
[ext_resource type="PackedScene" uid="uid://b05csatmoufkl" path="res://particles/big_fire.tscn" id="4_yygjh"]
[ext_resource type="AudioStream" uid="uid://cye6kv23kogky" path="res://sounds/CoalBurn.mp3" id="5_0qr4v"]
[ext_resource type="AudioStream" uid="uid://d06i6g5jbgxya" path="res://sounds/BigFireSound.mp3" id="6_h82cd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj457"]
size = Vector2(20, 7.2)

[sub_resource type="Curve" id="Curve_xio72"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.82268, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_etula"]
offsets = PackedFloat32Array(0, 0.713333, 0.886667)
colors = PackedColorArray(0.996078, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0)

[node name="CoalGenerator" type="Node2D" groups=["Supplier"]]
script = ExtResource("1_kar8t")

[node name="TempCoalGen" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_27460")

[node name="Physics" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Physics"]
scale = Vector2(5, 5)
polygon = PackedVector2Array(-16, 16, -16, 4, -9.8, 4, -8, 9.8, -4, 13, 4, 13, 8, 10, 10, 4, 16, 4, 16, 16)

[node name="Collection" type="Area2D" parent="."]
scale = Vector2(5, 5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collection"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_qj457")

[node name="FireParticles" type="Node2D" parent="."]
position = Vector2(-22, 16)

[node name="Fire1" parent="FireParticles" instance=ExtResource("3_l5nvf")]

[node name="Fire2" type="CPUParticles2D" parent="FireParticles"]
position = Vector2(22, -1)
emitting = false
amount = 10
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 15.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_xio72")
color_ramp = SubResource("Gradient_etula")

[node name="Fire3" type="CPUParticles2D" parent="FireParticles"]
position = Vector2(46, -1)
emitting = false
amount = 10
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 15.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_xio72")
color_ramp = SubResource("Gradient_etula")

[node name="BigFire" parent="FireParticles" instance=ExtResource("4_yygjh")]

[node name="CoalBurn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_0qr4v")
bus = &"SFX"

[node name="BigFireAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h82cd")

[connection signal="body_entered" from="Collection" to="." method="_on_collection_body_entered"]
